Allow the updating of quantity
- Implementation of 2 quick actions for controlling quanity
- Allows to control whether the snackbar appears at the top of bottom of window

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="overview_description">Here is an overview of \'%s\'. Select a quick action below to interact with this item or go back to view the whole inventory.</string>
 
     <string name="success_inventory">Successfully added item to inventory</string>
+    <string name="success_prop_quantity">Successfully updated quantity</string>
     <string name="cd_fruit">Fruit</string>
 
     <string name="overview_quantity">Quantity: %d</string>
